--- a/pcgrr/inst/templates/pcgr_rmarkdown/cpsr_main_findings.Rmd
+++ b/pcgrr/inst/templates/pcgr_rmarkdown/cpsr_main_findings.Rmd
@@ -19,32 +19,32 @@ cpsr_other_variants <- data.frame()
 
 if(NROW(class543_germline_variants) > 0){
   
-  class543_germline_variants <- class543_germline_variants %>%
+  class543_germline_variants <- class543_germline_variants |>
     dplyr::mutate(GENOTYPE = as.character(GENOTYPE))
   
-  cpsr_clinvar_variants <- class543_germline_variants %>%
+  cpsr_clinvar_variants <- class543_germline_variants |>
     dplyr::filter(CPSR_CLASSIFICATION_SOURCE == "ClinVar")
   
   if(NROW(cpsr_clinvar_variants) > 0){
-    cpsr_clinvar_variants <- cpsr_clinvar_variants %>%
+    cpsr_clinvar_variants <- cpsr_clinvar_variants |>
       dplyr::select(-c(CPSR_CLASSIFICATION,CPSR_PATHOGENICITY_SCORE,
-                       CPSR_CLASSIFICATION_DOC,CPSR_CLASSIFICATION_CODE)) %>%
+                       CPSR_CLASSIFICATION_DOC,CPSR_CLASSIFICATION_CODE)) |>
     dplyr::select(SYMBOL, CLINVAR_CLASSIFICATION,
                   dplyr::everything())
   }
   
     
-  cpsr_other_variants <- class543_germline_variants %>%
+  cpsr_other_variants <- class543_germline_variants |>
     dplyr::filter(CPSR_CLASSIFICATION_SOURCE == "Other")
   
   if(NROW(cpsr_other_variants) > 0){
-    cpsr_other_variants <- cpsr_other_variants %>%
+    cpsr_other_variants <- cpsr_other_variants |>
       dplyr::select(-c(CLINVAR, 
                        CLINVAR_REVIEW_STATUS_STARS, 
                        CLINVAR_VARIANT_ORIGIN, 
                        CLINVAR_CLASSIFICATION, 
                        CLINVAR_CONFLICTED, 
-                       CLINVAR_PHENOTYPE)) %>%
+                       CLINVAR_PHENOTYPE)) |>
       dplyr::select(SYMBOL, CPSR_CLASSIFICATION,
                     dplyr::everything())
   }
@@ -55,16 +55,16 @@ cpsr_biomarker_eitems <- data.frame()
 
 for(n in c('diagnostic','prognostic','predictive','predisposing')){
   if(NROW(cpsr_rep[['content']][['snv_indel']][['clin_eitem']][[n]]) > 0){
-    cpsr_biomarker_eitems <- cpsr_biomarker_eitems %>%
+    cpsr_biomarker_eitems <- cpsr_biomarker_eitems |>
       dplyr::bind_rows(
         cpsr_rep[['content']][['snv_indel']][['clin_eitem']][[n]]
-      ) %>%
+      ) |>
       dplyr::select(SYMBOL, GENE_NAME, CANCER_TYPE, EVIDENCE_TYPE,
                     EVIDENCE_LEVEL, dplyr::everything())
   }
 }
 
-n_biomarkers <- cpsr_biomarker_eitems %>% NROW()
+n_biomarkers <- cpsr_biomarker_eitems |> NROW()
 
 tag_gnomad <- cpsr_rep[['metadata']][['config']][['popgen']][['vcftag_gnomad']]
 desc_gnomad <- cpsr_rep[['metadata']][['config']][['popgen']][['popdesc_gnomad']]
@@ -144,7 +144,7 @@ DT::datatable(
     buttons = c('csv','excel'),
     dom = 'Bfrtip'
   )
-) %>%
+) |>
   DT::formatStyle(
     columns = c("SYMBOL"),
     valueColumns = c("CLINVAR_CLASSIFICATION"), 
@@ -210,7 +210,7 @@ DT::datatable(
     buttons = c('csv','excel'),
     dom = 'Bfrtip'
   )
-) %>%
+) |>
   DT::formatStyle(
     columns = c("SYMBOL"),
     valueColumns = c("CPSR_CLASSIFICATION"),
@@ -255,7 +255,7 @@ DT::datatable(
     list(buttons = c('csv','excel'),
          pageLength = 5,
          dom = 'Bfrtip')
-  ) %>%
+  ) |>
   DT::formatStyle(
     'EVIDENCE_LEVEL', 
     backgroundColor = DT::styleEqual(
@@ -269,7 +269,7 @@ DT::datatable(
         'E: Indirect evidence'), 
       c("#009E73","#009E73","#56B4E9", 
         "#56B4E9","#56B4E9","#0072B2",
-        "#E69F00", "#F0E442"))) %>%
+        "#E69F00", "#F0E442"))) |>
   DT::formatStyle(
     color="white", "SYMBOL", 
     "BIOMARKER_MAPPING", 
