--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier1.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier1.Rmd
@@ -105,7 +105,7 @@ cat('\n')
 
 ```{r table_scna_tier1, eval = NROW(pcg_report$content$cna$disp$tier1) > 0}
 
-variants_tier1_shared %>%
+variants_tier1_shared |>
   DT::datatable(escape=F, 
                 extensions=c("Buttons","Responsive"), 
                 options=list(buttons = c('csv','excel'), 
@@ -116,7 +116,7 @@ variants_tier1_shared %>%
                  fixedHeader = T,
                  scrollX = "900px",
                   columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
-                             dom = 'Bfrtip')) %>%
+                             dom = 'Bfrtip')) |>
   DT::formatStyle('EVIDENCE_LEVEL', 
                  backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines','B: Clinical evidence','B1: Clinical evidence: late trials','B2: Clinical evidence: early trials','C: Case study','D: Preclinical evidence','E: Indirect evidence'), c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442")))
 
