--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tsgene.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tsgene.Rmd
@@ -79,7 +79,7 @@ cat('\n')
 
 ```{r table_scna_tsgene, eval = NROW(pcg_report$content$cna$disp$tsgene_loss) > 0}
 
-tsgene_loss_variants %>%
+tsgene_loss_variants |>
   DT::datatable(escape = F, 
                 extensions = c("Buttons","Responsive"), 
                 options = list(
@@ -91,7 +91,7 @@ tsgene_loss_variants %>%
                   #fixedHeader = T,
                   scrollX = "900px",
                   #columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
-                  dom = 'Bfrtip')) %>%
+                  dom = 'Bfrtip')) |>
   DT::formatStyle("SYMBOL","OPENTARGETS_RANK", color = "white", backgroundColor = DT::styleInterval(pcg_report[['content']][['report_display_config']][['opentargets_rank']][['breaks']], pcg_report[['content']][['report_display_config']][['opentargets_rank']][['colors']]))
 
 ```
