--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_tmb.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_tmb.Rmd
@@ -75,20 +75,20 @@ algorithm <- pcg_report[['content']][['tmb']][['algorithm']]
 #tmb_high = pcg_report[['metadata']][['config']][['tmb']][['tmb_intermediate_limit']]
 
 tmb_site_colors <- 
-  data.frame(primary_site = unique(tcga_tmb$primary_site), stringsAsFactors = F) %>%
-    dplyr::filter(!is.na(primary_site)) %>%
-  dplyr::mutate(color = "#f0f0f0") %>%
+  data.frame(primary_site = unique(tcga_tmb$primary_site), stringsAsFactors = F) |>
+    dplyr::filter(!is.na(primary_site)) |>
+  dplyr::mutate(color = "#f0f0f0") |>
   dplyr::mutate(color = dplyr::if_else(primary_site == p_site,
                                        pcg_report[['metadata']][['color_palette']][['tier']][['values']][1], color))
   
 tmb_site_color_vec <- tmb_site_colors$color
 names(tmb_site_color_vec) <- tmb_site_colors$primary_site
 
-tcga_tmb <- tcga_tmb %>% dplyr::filter(!is.na(primary_site))
+tcga_tmb <- tcga_tmb |> dplyr::filter(!is.na(primary_site))
 
 if(algorithm == "nonsyn"){
-  tcga_tmb <- tcga_tmb %>% dplyr::filter(!is.na(primary_site)) %>%
-    dplyr::select(primary_site, tmb_ns_log10, tmb_ns) %>%
+  tcga_tmb <- tcga_tmb |> dplyr::filter(!is.na(primary_site)) |>
+    dplyr::select(primary_site, tmb_ns_log10, tmb_ns) |>
     dplyr::rename(tmb = tmb_ns, tmb_log10 = tmb_ns_log10)
 }
 
