--- a/pcgrr/inst/templates/pcgr_rmarkdown/snv_tier1.Rmd
+++ b/pcgrr/inst/templates/pcgr_rmarkdown/snv_tier1.Rmd
@@ -76,13 +76,13 @@ htmltools::br()
 htmltools::br()
 
 DT::datatable(variants_tier1_predictive_shared,  escape=F,extensions=c("Buttons","Responsive"), 
-              options=list(buttons = c('csv','excel'),  scrollCollapse=T, dom = 'Bfrtip')) %>%
+              options=list(buttons = c('csv','excel'),  scrollCollapse=T, dom = 'Bfrtip')) |>
   DT::formatStyle('EVIDENCE_LEVEL', 
                   backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines',
                                                      'B: Clinical evidence','B1: Clinical evidence: late trials',
                                                      'B2: Clinical evidence: early trials','C: Case study',
                                                      'D: Preclinical evidence','E: Indirect evidence'), 
-                                                   c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) %>%
+                                                   c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) |>
   DT::formatStyle(color="white", "SYMBOL", "BIOMARKER_MAPPING", fontWeight = 'bold', `text-align` = 'center',
                   backgroundColor = DT::styleEqual(c('exact','codon','exon','gene'), 
                                                    c('#000','#000',pcg_report[['metadata']][['color_palette']][['warning']][['values']][1], pcg_report[['metadata']][['color_palette']][['warning']][['values']][1])))
@@ -135,13 +135,13 @@ htmltools::br()
 htmltools::br()
 
 DT::datatable(variants_tier1_prognostic_shared, escape=F,extensions=c("Buttons","Responsive"), 
-              options=list(buttons = c('csv','excel'), scrollCollapse=T, dom = 'Bfrtip')) %>%
+              options=list(buttons = c('csv','excel'), scrollCollapse=T, dom = 'Bfrtip')) |>
   DT::formatStyle('EVIDENCE_LEVEL', 
                   backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines',
                                                      'B: Clinical evidence','B1: Clinical evidence: late trials',
                                                      'B2: Clinical evidence: early trials','C: Case study',
                                                      'D: Preclinical evidence','E: Indirect evidence'), 
-                                                   c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) %>%
+                                                   c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) |>
    DT::formatStyle(color="white", "SYMBOL", "BIOMARKER_MAPPING", fontWeight = 'bold', `text-align` = 'center',
                   backgroundColor = DT::styleEqual(c('exact','codon','exon','gene'), 
                                                    c('#000','#000',pcg_report[['metadata']][['color_palette']][['warning']][['values']][1], pcg_report[['metadata']][['color_palette']][['warning']][['values']][1])))
@@ -195,13 +195,13 @@ htmltools::br()
 htmltools::br()
 
 DT::datatable(variants_tier1_diagnostic_shared, escape=F, extensions=c("Buttons","Responsive"), 
-              options=list(buttons = c('csv','excel'), scrollCollapse=T, dom = 'Bfrtip')) %>%
+              options=list(buttons = c('csv','excel'), scrollCollapse=T, dom = 'Bfrtip')) |>
   DT::formatStyle('EVIDENCE_LEVEL', 
                   backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines',
                                                      'B: Clinical evidence','B1: Clinical evidence: late trials',
                                                      'B2: Clinical evidence: early trials','C: Case study',
                                                      'D: Preclinical evidence','E: Indirect evidence'), 
-                                                   c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) %>%
+                                                   c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) |>
    DT::formatStyle(color="white", "SYMBOL", "BIOMARKER_MAPPING", fontWeight = 'bold', `text-align` = 'center',
                   backgroundColor = DT::styleEqual(c('exact','codon','exon','gene'), 
                                                    c('#000','#000',pcg_report[['metadata']][['color_palette']][['warning']][['values']][1], pcg_report[['metadata']][['color_palette']][['warning']][['values']][1])))
