--- a/pcgrr/inst/templates/pcgr_rmarkdown/snv_tier4.Rmd
+++ b/pcgrr/inst/templates/pcgr_rmarkdown/snv_tier4.Rmd
@@ -13,7 +13,7 @@ if(NROW(pcg_report[['content']][['snv_indel']][["disp"]][['tier4']]) > 0){
     cat('<br>')
     pcg_report[['content']][['snv_indel']][["disp"]][['tier4']] <- head(pcg_report[['content']][['snv_indel']][["disp"]][['tier4']], 2000)
   }
-  DT::datatable(pcg_report[['content']][['snv_indel']][["disp"]][['tier4']], options = myOptions, escape=F, extensions = c("Buttons","Responsive")) %>%
+  DT::datatable(pcg_report[['content']][['snv_indel']][["disp"]][['tier4']], options = myOptions, escape=F, extensions = c("Buttons","Responsive")) |>
   DT::formatStyle("SYMBOL","OPENTARGETS_RANK", color = "white", backgroundColor = DT::styleInterval(pcg_report[['content']][['report_display_config']][['opentargets_rank']][['breaks']], pcg_report[['content']][['report_display_config']][['opentargets_rank']][['colors']]))
 }
 
